fixed mobile menus, page spacing, horizontal scroll, .toc-wrapper

--- a/src/styles/docs/docs-types.css
+++ b/src/styles/docs/docs-types.css
@@ -74,8 +74,6 @@
 }
 
 .typedocs-content {
-  flex-grow: 1;
-
   &>p {
     margin-block: 0.618rem;
   }
