--- a/src/styles/docs/nav/nav-tree.css
+++ b/src/styles/docs/nav/nav-tree.css
@@ -6,7 +6,6 @@
   & [data-part="item"] {
     padding-top: 0.2rem;
     padding-bottom: 0.2rem;
-    padding-left: 0.15rem;
   }
 }
 
@@ -18,7 +17,7 @@
   cursor: pointer;
   font-size: 1rem;
   width: 100%;
-  height: 2.2rem;
+  min-height: 2.2rem;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -80,7 +79,7 @@ html.dark .nav-shevron {
     transition: background-color 0.2s ease;
 
     &:hover {
-      background-color: hsl(var(--nav-hovered-bkg))
+      background-color: hsl(var(--nav-hovered-bkg));
     }
 
     &>a {
@@ -93,8 +92,8 @@ html.dark .nav-shevron {
     }
   }
 
-    & .arktree-item.__current-type-doc,
-    [data-part="item-content"]>div.__current-type-doc {
+  & .arktree-item.__current-type-doc,
+  [data-part="item-content"]>div.__current-type-doc {
     background-color: hsl(var(--nav-selected-bkg));
 
     &>a {
